--- a/task-03.html
+++ b/task-03.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
+    <style>
+      .gallery {
+        display: flex;
+        list-style: none;
+        padding: 0;
+      }
+  
+      .gallery-item {
+        margin: 10px;
+      }
+  
+      .gallery-item img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      }
+    </style>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
