--- a/task-01.html
+++ b/task-01.html
@@ -27,7 +27,7 @@
 
         <ul>
           <li>Bread</li>
-          <li>Prasley</li>
+          <li>Parsley</li>
           <li>Cheese</li>
         </ul>
       </li>
@@ -44,16 +44,6 @@
       </li>
     </ul>
 
-    <script src="js/task-01.js" type="module">
-          const categoriesList = document.getElementById('categories');
-      const categoryItems = categoriesList.querySelectorAll('.item');
-      console.log(`Number of categories: ${categoryItems.length}\n`);
-      categoryItems.forEach(categoryItem => {
-        const categoryName = categoryItem.querySelector('h2').textContent;
-        const categoryElements = categoryItem.querySelectorAll('ul li').length;
-        console.log(`Category: ${categoryName}`);
-        console.log(`Elements: ${categoryElements}\n`);
-      });
-    </script>
+    <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
